PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite 10.0.0 Milestone 1
19 August 2020

pts-core: Add keep-results-in-result-file sub-command
pts-core: Split the dynamic result viewer into its own embed class for result file handling to allow for easy re-use by OpenBenchmarking, Phoromatic, etc
pts-core: Various changes for supporting the new OpenBenchmarking.org infrastructure
pts_Graph: Add histogram type
phodevi: CPU core name / family detection to friendly strings (OpenBenchmarking.org driven)
phodevi: Report core name via system-info command
phodevi: Various storage HDD/SSD detection reporting improvements
phodevi: Ampere Altra detection
phodevi: macOS/Apple hardware detection improvements

Phoronix Test Suite 9.8.0
9 July 2020

pts-core: Handling of cases where all options are unsupported (such as CUDA and OpenCL tests with no valid backends found) to avoid prompts
pts-core: Be more liberal in allowing CUDA/OpenCL GPU compute tests to run fine without display server active
pts-core: Fix for not filling test suites of contained tests in some select cases (sub-suites listing in results viewer)
pts-core: Allow creating new virtual test suites that are not prefixed by a OB repository
phodevi: NVIDIA GPU detection within WSL2
docker: Rewritten phoronix/pts Docker implementation based on Ubuntu 20.04 LTS

Phoronix Test Suite 9.8.0 Milestone 2
24 June 2020

pts-core: Add client side plumbing for estimated test install time from OpenBenchmarking.org
pts-core: Add estimate-install-time sub-command, show estimated install time when installing a test
pts-core: Improve web browser selection logic for result viewer
pts-core: Add search field to the result viewer areas for limiting based on title/argument matching
pts-core: Various minor fixes
pts-core: Don't show OpenCL test options if no OpenCL drivers/adapters appear present
phodevi: Fix for incorrect monitor count when parsing X.Org log
phodevi: Warning fixes for latest WSL

Phoronix Test Suite 9.8.0 Milestone 1