@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+pts-core: Honor NO_COLOR environment variable for disabling terminal coloring
+
 Phoronix Test Suite 10.0.0 Milestone 1
 19 August 2020
 
